apps/base/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: website
          image: ghcr.io/isaiah-harville/website/site:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
