apps/base/website/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Public
    gethomepage.dev/name: Website
    gethomepage.dev/description: Personal site
    gethomepage.dev/pod-selector: app=website
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [isaiah.harville.dev]
      secretName: harville-wildcard-shared-tls
  rules:
    - host: isaiah.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
